--- a/package.json
+++ b/package.json
@@ -10,6 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.1"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.10.1",
+    "preline": "^1.9.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4"
   }
 }
