--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "servitec",
   "type": "module",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
