--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.10.1",
+    "flowbite": "^1.8.1",
     "preline": "^1.9.0",
     "tailwindcss": "^3.0.24"
   },
