--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "servitec",
+  "name": "servicio-servitec",
+  "author": "Damian Huchín",
   "type": "module",
   "version": "0.0.1",
   "license": "MIT",
@@ -14,7 +15,6 @@
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.10.1",
     "flowbite": "^1.8.1",
-    "preline": "^1.9.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
